criando a nova história, documentação dos alunos

--- a/instsoli/templates/instsoli/pages/portal_aluno/portal_aluno.html
+++ b/instsoli/templates/instsoli/pages/portal_aluno/portal_aluno.html
@@ -18,10 +18,10 @@
             
             <!-- Card 1 -->
             <div class="card">
-                <i class='bx bxs-notepad icon'></i>
-                <h3>Horários</h3>
-                <p>Acesse os horários das turmas</p>
-                <a href="#">Acessar</a>
+                <i class='bx bxs-file-blank icon'></i>
+                <h3>Documentação</h3>
+                <p>Anexe os seus documentos nessa página</p>
+                <a href="{% url "instsoli:documentacao" %}">Acessar</a>
             </div>
 
             <!-- Card 3 -->
